--- a/app/src/main/res/layout/activity_inserir.xml
+++ b/app/src/main/res/layout/activity_inserir.xml
@@ -10,6 +10,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:id="@+id/nome"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -18,6 +20,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:id="@+id/preco"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -29,26 +33,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/desc"
         android:hint="Escreva uma descrição para o produto."
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_weight="0.51"
         android:textAlignment="center" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="154dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.35"
-        android:src="@mipmap/ic_launcher" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/carregarImg"
-        android:hint="Carregar Imagem" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inserir"
+        android:layout_marginStart="20dp"
         android:id="@+id/inserir" />
 
 </LinearLayout>
